Add history content

--- a/index.html
+++ b/index.html
@@ -69,37 +69,42 @@
         </section>
         <!-- Historic timeline -->
         <section id="history-timeline">
-            <h2>History and timeline</h2>
-            <!-- Emmet to describe current expected html structure: -->
-            <!-- article>(header>h3{subtitle})+(section>p{content}) -->
+            <h2>A bit of history</h2>
             <article>
                 <header>
-                    <h3>Before cars</h3>
+                    <h3>Cars before mass production</h3>
                 </header>
                 <section>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi ducimus sit quo nesciunt
-                        possimus, reiciendis
-                        earum magni placeat voluptate dolor, quaerat sed voluptas magnam quisquam quam repellat.
-                        Ducimus, assumenda ad!</p>
+                    <p>The first working steam-powered vehicle was designed and quite possibly built by Ferdinand Verbiest, around 1672.</p>
+                    <p>In 1801, Richard Trevithick built and demonstrated his Puffing Devil road locomotive, believed by many to be the
+                        first demonstration of a steam-powered road vehicle.</p>
+                    <p>A variety of steam-powered road vehicles were used during the first part of the 19th century, including steam cars,
+                        steam buses, phaetons, and steam rollers. In the United Kingdom, sentiment against them led to the Locomotive Acts of 1865.</p>
+                    <p>In 1896, Karl Benz designed and patented the first internal-combustion flat engine, called boxermotor. During the last years
+                        of the nineteenth century, Benz was the largest car company in the world with 572 units produced in 1899</p>
+                    <p>In 1895, James Duryea established the first American automobile manufacturing company. The American automobile industry
+                        was born as Duryea started the manufacturing of the first 13 vehicles in 1896.</p>
                 </section>
             </article>
             <article>
                 <header>
-                    <h3>Transition</h3>
+                    <h3>The dawn of the 20th century</h3>
                 </header>
                 <section>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi cumque a voluptatem, ut, ullam
-                        distinctio, dolor
-                        dolorum maxime minus aut consequatur? Laboriosam expedita ex temporibus debitis? Id, amet in?
-                        Temporibus!</p>
-                </section>
-            </article>
-            <article>
-                <header>
-                    <h3>subtitle</h3>
-                </header>
-                <section>
-                    <p>content</p>
+                    <p>Large-scale, production-line manufacturing of affordable cars was started by Ransom Olds in 1901 at his Oldsmobile factory in
+                        Lansing, Michigan and based upon stationary assembly line techniques pioneered by Marc Isambard Brunel at the Portsmouth Block
+                        Mills, England, in 1802. The assembly line style of mass production and interchangeable parts had been pioneered in the U.S. by
+                        Thomas Blanchard in 1821, at the Springfield Armory in Springfield, Massachusetts. Later this concept was greatly expanded by Henry
+                        Ford.</p>
+                    <p>In 1908 the Ford Motor Company produced the famous Model T. The idea was to produce a motor car that the average person
+                        could afford, operate, and maintain. The first Model T sold for $850.00.</p>
+                    <p>By developing the first assembly line in 1914 the New Model T’s now come off the assembly line at the rate of one car every 24
+                        seconds. By 1915 the price of a Model T had dropped to $440.00, and by 1925 a Model T could be bought for $290.00. The early
+                        1900’s cars now are within reach of the average car buyer.</p>
+                    <p>In the automotive industry, its success was dominating, and quickly spread worldwide seeing the founding of Ford France and Ford
+                        Britain in 1911, Ford Denmark 1923, Ford Germany 1925; in 1921, Citroën was the first native European manufacturer to adopt the
+                        production method. Soon, companies had to have assembly lines, or risk going broke; by 1930, 250 companies which did not, had
+                        disappeared.</p>
                 </section>
             </article>
         </section>
