Add gallery content, update images to webp format, and update docs

--- a/gallery.html
+++ b/gallery.html
@@ -34,26 +34,21 @@
     </header>
     <!-- Gallery content -->
     <section id="gallery-content">
-        <h2>Ford XY</h2>
-        <img src="assets/images/ford-1.jpg" alt="A gold and dark painted Ford Model-T, in natural light.">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut exercitationem adipisci consequatur,
-            fuga laborum culpa
-            commodi alias iure earum, tempore nobis veritatis consectetur ipsa? Reprehenderit delectus nesciunt
-            modi at nobis!</p>
+        <h2>Ford Model A - Tudor Sedan</h2>
+        <img src="assets/images/ford-1.webp" alt="A gold and dark painted car, in natural light.">
+        <p>The Sedan was probably the most popular of the body styles especially the 2 door. It was basically the family saloon of the Model A bodies
+            and at $495 for the 2 door and $570 for the Fordor, it was great value and extreme luxury after the faithful Model T.</p>
         <hr class="hr-default">
-        <h2>Ford XY</h2>
-        <img src="assets/images/ford-2.jpg" alt="Two seat green painted Ford Model-T, in natural light.">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa accusamus consequatur culpa magnam sit
-            obcaecati laborum
-            recusandae, eaque beatae dignissimos veniam asperiores aut? Sapiente, magnam harum. Ducimus soluta
-            vel quis!</p>
+        <h2>Ford Model A - Special Coupe</h2>
+        <img src="assets/images/ford-2.webp" alt="Two seat green painted car, in front of a wooden garage.">
+        <p>The difference between the Model A and Model T was like night and day. The engine was a water-cooled L-head inline four with a displacement
+            of 201 cu in. This engine provided 40 hp (30 kW; 41 PS). Top speed was around 65 mph (105 km/h).</p>
         <hr class="hr-default">
-        <h2>Ford XY</h2>
-        <img src="assets/images/ford-1933-hotroad.jpg"
-            alt="Black and white picture of a Ford hotroad without the bonnet.">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quaerat quae, tempora corrupti in
-            molestias repellendus?
-            Quod, error quos illo ipsa saepe odio quam cumque voluptate debitis et voluptatem modi!</p>
+        <h2>Ford Model T - Touring</h2>
+        <img src="assets/images/ford-t.webp"
+            alt="A black painted car outside of an old mansion.">
+        <p>We're looking at a 1919 Ford Model T Touring Car in black paint. A step back in time with a car that was affordable, and the first car mass
+            produced on a moving assembly lines with completely interchangeable parts.</p>
     </section>
     <!-- Social Networks -->
     <hr class="hr-space">
