Add event content, and update docs

--- a/events.html
+++ b/events.html
@@ -39,14 +39,25 @@
     <main id="events-page">
         <!-- Upcoming events -->
         <section id="event-cards-wrapper">
-            <!-- div>h3{eventName}+span{contactDetails}+span.float-right{clickToBook?} -->
             <div>
-                <h3>eventName</h3>
-                <span>contactDetails</span><span class="float-right"><i class="far fa-calendar-check"></i>date</span>
+                <h3>CLASSIC CAR SHOW</h3>
+                <span>This Classic Car Show is planned to take place at our main garage on Ballybough Rd, Dublin</span>
+                <span class="float-right"><i class="far fa-calendar-check"></i> 20 - November, 2021</span>
             </div>
             <div>
-                <h3>eventName</h3>
-                <span>contactDetails</span><span class="float-right"><i class="far fa-calendar-check"></i>date</span>
+                <h3>MAGHERAGALL COUNTRY VINTAGE FAIR</h3>
+                <span>The Magheragall Country Vintage Fair is planned to take place at 70 Ballinderry Road, Lisburn</span>
+                <span class="float-right"><i class="far fa-calendar-check"></i> 25 - May, 2019</span>
+            </div>
+            <div>
+                <h3>BANBRIDGE OLD VEHICLE CLUB CLASSIC CAR DISPLAY</h3>
+                <span>The Banbridge Old Vehicle Club Classic Car Display is planned to take place at Warren Park, Lisburn</span>
+                <span class="float-right"><i class="far fa-calendar-check"></i> 23 - April, 2017</span>
+            </div>
+            <div>
+                <h3>CAMLOUGH AND DISTRICT OLD VEHICLE CLUB MOYNALTY SHOW</h3>
+                <span>The Camlough And District Old Vehicle Club Moynalty Show is planned to take place at Moynalty Kells</span>
+                <span class="float-right"><i class="far fa-calendar-check"></i> 10 - August, 2014</span>
             </div>
         </section>
         <hr class="hr-space small-screen-only">
