Fix horizontal rule

--- a/events.html
+++ b/events.html
@@ -39,6 +39,7 @@
     <main id="events-page">
         <!-- Upcoming events -->
         <section id="event-cards-wrapper">
+            <h2>Events</h2>
             <div>
                 <h3>CLASSIC CAR SHOW</h3>
                 <span>This Classic Car Show is planned to take place at our main garage on Ballybough Rd, Dublin</span>
