Remove iframe frameborder, add map title, and further reduce image size

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 </p>
                 <p>Take a look at this quick take from bloomberg</p>
             </div>
-            <iframe class="right-two-third" id="yt-video" src="https://www.youtube-nocookie.com/embed/MLMS_QtKamg?start=16"
-                title="YouTube video player" frameborder="0"
+            <iframe width="32" height="24" class="right-two-third" id="yt-video" src="https://www.youtube-nocookie.com/embed/MLMS_QtKamg?start=16"
+                title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </section>
@@ -121,7 +121,7 @@
             <div class="right-two-third">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d607.6721570623787!2d-6.245479534081351!3d53.3596741714965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e60f64f8e19%3A0xa08cf78eff8de078!2sBallybough%20Rd%2C%20Ballybough%2C%20Dublin%2C%20Ireland!5e1!3m2!1sen!2suk!4v1634232912824!5m2!1sen!2suk"
-                    allowfullscreen="" loading="lazy"></iframe>
+                    allowfullscreen="" loading="lazy" title="Map with the address location pinned"></iframe>
             </div>
         </section>
     </main>
