Fix history-timeline semantic structure

--- a/index.html
+++ b/index.html
@@ -70,11 +70,8 @@
         <!-- Historic timeline -->
         <section id="history-timeline">
             <h2>A bit of history</h2>
-            <article>
-                <header>
-                    <h3>Cars before mass production</h3>
-                </header>
                 <section>
+                    <h3>Cars before mass production</h3>
                     <p>The first working steam-powered vehicle was designed and quite possibly built by Ferdinand Verbiest, around 1672.</p>
                     <p>In 1801, Richard Trevithick built and demonstrated his Puffing Devil road locomotive, believed by many to be the
                         first demonstration of a steam-powered road vehicle.</p>
@@ -85,12 +82,8 @@
                     <p>In 1895, James Duryea established the first American automobile manufacturing company. The American automobile industry
                         was born as Duryea started the manufacturing of the first 13 vehicles in 1896.</p>
                 </section>
-            </article>
-            <article>
-                <header>
-                    <h3>The dawn of the 20th century</h3>
-                </header>
                 <section>
+                    <h3>The dawn of the 20th century</h3>
                     <p>Large-scale, production-line manufacturing of affordable cars was started by Ransom Olds in 1901 at his Oldsmobile factory in
                         Lansing, Michigan and based upon stationary assembly line techniques pioneered by Marc Isambard Brunel at the Portsmouth Block
                         Mills, England, in 1802. The assembly line style of mass production and interchangeable parts had been pioneered in the U.S. by
@@ -106,10 +99,10 @@
                         production method. Soon, companies had to have assembly lines, or risk going broke; by 1930, 250 companies which did not, had
                         disappeared.</p>
                 </section>
-            </article>
         </section>
         <!-- Address and Map -->
         <section id="address">
+            <h3>Find us on</h3>
             <div class="left-third">
                 <code>
                     <strong>Address:</strong><br>
